--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,9 @@ body {
   margin: 0px;
   background:#7B8092;
   overscroll-behavior-y: contain;
+  padding-left:env(safe-area-inset-left);
+  padding-right:env(safe-area-inset-left);
+  padding-bottom:env(safe-area-inset-bottom);
 }
 
 .iconsvg {
@@ -4376,8 +4379,8 @@ body.dark #preview-expand-box > div > div.timespan {
   justify-content:space-between;
   align-items:stretch;
   gap:4px;
-  padding-bottom:0px;
-  padding-bottom:env(safe-area-inset-bottom);
+  /*padding-bottom:0px;
+  padding-bottom:env(safe-area-inset-bottom);*/
 }
 
 #cornerblock2:before {
