--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,10 @@ body {
   margin: 0px;
   background:#7B8092;
   overscroll-behavior-y: contain;
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 .iconsvg {
@@ -4378,7 +4382,7 @@ body.dark #preview-expand-box > div > div.timespan {
   justify-content:space-between;
   align-items:stretch;
   gap:4px;
-  padding-bottom:5px;
+  padding-bottom:env(safe-area-inset-bottom);
 }
 
 #cornerblock2:before {
@@ -5803,10 +5807,10 @@ body.dark a.button.newbuttongrey:hover {
 
 @supports (-webkit-touch-callout: none) { 
     /*add custom style to add bottom padding for iOS devices*/
-    #cornerblock2 {
+    /*#cornerblock2 {
       padding-bottom:14px;
     }
     body {
       padding-bottom:14px;
-    }
+    }*/
 }
