--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,13 @@ body {
   overscroll-behavior-y: contain;
 }
 
+#popupchartdiv {
+  display: none;position:fixed;background:black;top:0;left:0;z-index:96;width:100%;height:100%;padding:0;
+  padding-left:env(safe-area-inset-left);
+  padding-right:env(safe-area-inset-right);
+  padding-bottom:env(safe-area-inset-bottom);
+}
+
 .iconsvg {
   width: 1em;
   height: 1em;
@@ -5170,6 +5177,7 @@ body.dark #chart2wrapper {
     column-count:2;
     column-gap:0px;
     padding-top:10px;
+    background:red;
   }
   .cardscontainer div {
     break-inside:avoid;
